fix(measurements): fix: wrong position of the tooltip

--- a/packages/theme-default/src/measurements.scss
+++ b/packages/theme-default/src/measurements.scss
@@ -1,10 +1,22 @@
 @import './core/variables.scss';
 
-// 导航控件
+// 量算组件
 .vc-measurements-container {
   position: absolute;
   z-index: $z-fab;
   // .vc-measure-button .active {
   //   opacity: 0.7 !important;
   // }
+}
+
+.vc-drawtip {
+  z-index: $z-tooltip;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: $tooltip-padding;
+
+  @media (max-width: $breakpoint-xs-max) {
+    font-size: $tooltip-mobile-fontsize;
+    padding: $tooltip-mobile-padding;
+  }
 }
